--- a/GoIT/html/homework/EXAM/index.html
+++ b/GoIT/html/homework/EXAM/index.html
@@ -118,30 +118,11 @@
     <div  class="main_background">
     <section class="main clearfix">
 	     <div class="main__1">
-		   <div class="wrap_jcarousel wrap_jcarousel--2">
-              <img class="main__icon" src="img/man.png" alt="">
-              <div class="jcarousel jcarousel--2">
-                 <ul class="jcarousel__ul">
-                    <li class="jcarousel__li jcarousel__li--2">
-                        <p class="main__header">PINGBULLER <span class="purple">STARTS HERE</span></p>
-		                <p class="main__description">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices po- suere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
-                    </li>
-                    <li class="jcarousel__li jcarousel__li--2">
-                        <p class="main__header">PINGBULLER <span class="purple">STARTS HERE</span></p>
-		                <p class="main__description">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices po- suere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
-                    </li>
-                    <li class="jcarousel__li jcarousel__li--2">
-                        <p class="main__header">PINGBULLER <span class="purple">STARTS HERE</span></p>
-		                <p class="main__description">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices po- suere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
-                    </li>
-                    <li class="jcarousel__li jcarousel__li--2">
-                        <p class="main__header">PINGBULLER <span class="purple">STARTS HERE</span></p>
-		                <p class="main__description">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices po- suere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
-                    </li>
-                 </ul>
-             </div>
-             <p class="jcarousel-pagination jcarousel-pagination--2"></p>
-           </div>  
+		   <section class="main__information clearfix">
+		      <img class="main__icon" src="img/man.png" alt="">
+		      <p class="main__header">PINGBULLER <span class="purple">STARTS HERE</span></p>
+		 	  <p class="main__description">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices po- suere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
+		   </section>	   
 		 </div>
 		 <section class="updates clearfix">
 		 	<p class="main__header main__header--updates">RECENT UPDATES</p>
@@ -164,62 +145,5 @@
 		 </section>
 	</section>
 	</div>
-	<div class="brends__background">
-		 <section class="brends">
-		 	<a class="brend" href="#"></a>
-		 	<a class="brend brend--2" href="#"></a>
-		 	<a class="brend brend--3" href="#"></a>
-		 	<a class="brend brend--4" href="#"></a>
-		 	<a class="brend brend--5" href="#"></a>
-		 	<a class="brend brend--6" href="#"></a>
-		 </section>
-	</div>
-	<!-- FOOTER -->
-	<footer>
-		<section class="footer__information__background clearfix">
-			<div class="footer__information__content">
-			<section class="footer__block">
-				<p class="logo__1 logo__1--2">PIGBULL<span class="logo__2 logo__2--2">ER</span></p>
-				<p class="copyright">Copyright 2013, Pingbull AS</p>
-				<p class="footer__description">Nunc turpis neque, feugiat eget eleif- end et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pul-</p>
-			</section>
-			<section class="footer__block footer__block--2">
-				<p class="main__header main__header--footer">RECENT COMMENTS</p>
-				<p class="footer__description footer__description--2">Nunc turpis neque, feugiat eget eleif- end et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis</p>
-			</section>
-			<section class="footer__block footer__block--2">
-				<p class="main__header main__header--footer">NEWS CATEGORIES</p>
-				<p class="footer__description footer__description--2">Nunc turpis neque, feugiat eget eleif- end et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis</p>
-			</section>
-		    </div>
-		</section>
-		<section class="background__bottom">
-			<div class="background__bottom__content clearfix">
-			<nav class="nav nav--bottom">
-			  <ul class="menu">
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">HOME</a>
-			    </li>
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">ABOUT</a>
-			    </li>
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">BLOG</a>
-			    </li>
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">PRODUCTS</a>
-			    </li>
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">LOREM IPSUM</a>
-			    </li>
-			    <li class="menu__item menu__item--bottom">
-			      <a class="menu__link menu__link--bottom" href="#">DOLOR SIT AMET</a>
-			    </li>
-		      </ul>
-		  </nav>
-		  <p class="designed">Designed by <span class="designed__2">Pingbull AS</span></p>
-		</section>
-	</div>
-	</footer>
 </body>
 </html>
