--- a/GoIT/test/ie8/index.html
+++ b/GoIT/test/ie8/index.html
@@ -7,6 +7,8 @@
 	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 </head>
 <body>
-	<div class="rounded"></div>
+   <div class="cont">
+   	<div class="rounded"></div>
+   </div>
 </body>
 </html>
