--- a/GoIT/test/ie8/index.html
+++ b/GoIT/test/ie8/index.html
@@ -5,10 +5,12 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
-   <div class="cont">
-   	<div class="rounded"></div>
-   </div>
+   <img class="image" src="img/step_3.jpg" alt="">
+   <img class="image" src="img/step_3.jpg" alt="">
+   <img class="image" src="img/step_3.jpg" alt="">
+   <img class="image" src="img/step_3.jpg" alt="">
 </body>
 </html>
