--- a/my works/Build Home (html5, css3, js)/index.html
+++ b/my works/Build Home (html5, css3, js)/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Lessons 19-20</title>
+	<title>Build Home</title>
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles/css/dist/style.main.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
