--- a/my works/PINGBULLER (responsive, ie10+)/index.html
+++ b/my works/PINGBULLER (responsive, ie10+)/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>EXAM</title>
+	<title>PINGBULLER</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/style.css">
