--- a/test/touch/index.html
+++ b/test/touch/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
   <title>TEST</title>
+  <script type="text/javascript">
+    var is_touch_device = 'ontouchstart' in document.documentElement;
+    if(is_touch_device) alert("touch is enabled!");
+  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
