--- a/test/touch/index.html
+++ b/test/touch/index.html
@@ -6,9 +6,8 @@
   <title>TEST</title>
   <script type="text/javascript">
     var is_touch_device = 'ontouchstart' in document.documentElement;
-    if(is_touch_device) alert("touch is enabled!");
+    if(is_touch_device) document.write('<link rel="stylesheet" href="style.css">');
   </script>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="block">
