--- a/test/touch/index.html
+++ b/test/touch/index.html
@@ -6,7 +6,8 @@
   <title>TEST</title>
   <script type="text/javascript">
     var is_touch_device = 'ontouchstart' in document.documentElement;
-    if(is_touch_device) document.write('<link rel="stylesheet" href="style.css">');
+    if(is_touch_device) document.write('<link rel="stylesheet" href="style-touch.css">');
+    else document.write('<link rel="stylesheet" href="style.css">')
   </script>
 </head>
 <body>
