--- a/test/OP/src/banner.html
+++ b/test/OP/src/banner.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/style.main.min.css">
 </head>
 <body>
-  <div class="banner">
+  <div class="banner clearfix">
       <div class="banner__wrapper clearfix">
 		      <section class="banner__logo">
 			        <img class="banner__logo__image" src="img/banner_logo.svg" alt="">
@@ -18,9 +18,11 @@
 			    wolf typewriter mixtape small batch. DIY pickled four loko McSweeney's, Odd Future dreamcatcher plaid.
 			    Single-origin coffee McSweeney's banjo.</p>
 			  	<a class="banner__link" href="#">
-				    <object class="banner__link__object" type="image/svg+xml" data="img/link.svg"></object>
+						<svg class="banner__link__svg"></svg>
 			    </a>
       </div>
    </div>
+	 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+	 <script src="js/script.main.min.js"></script>
 </body>
 </html>
