--- a/test/touch/index.html
+++ b/test/touch/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript">
     var is_touch_device = 'ontouchstart' in document.documentElement;
     if(is_touch_device) document.write('<link rel="stylesheet" href="style-touch.css">');
-    else document.write('<link rel="stylesheet" href="style.css">')
+    else document.write('<link rel="stylesheet" href="style.css">');
   </script>
 </head>
 <body>
