--- a/test/email/index.html
+++ b/test/email/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-<form id="form" action="send.php">
+<form id="form" action="send.php" method="post">
     <input type="text" name="name" required="required"/>
     <input type="text" name="phone" required="required"/>
     <input type="submit" value="Заказать звонок"/>
