--- a/test/email/index.html
+++ b/test/email/index.html
@@ -9,10 +9,17 @@
     <script src="script.js"></script>
 </head>
 <body>
-<form id="form" action="send.php" method="post">
-    <input type="text" name="name" required="required"/>
-    <input type="text" name="phone" required="required"/>
-    <input type="submit" value="Заказать звонок"/>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Отправка формы</title>
+</head>
+<body>
+<form>
+    <p><input placeholder="Ваше имя" name="user"></p>
+    <p><input type="submit" value="Отправить" formaction="send.php" formmethod="post"></p>
 </form>
+</body>
+</html>
 </body>
 </html>
