--- a/test/email/index.html
+++ b/test/email/index.html
@@ -1,12 +1,19 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Отправка формы</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
-<form>
-    <p><input placeholder="Ваше имя" name="user"></p>
-    <p><input type="submit" value="Отправить" formaction="send.php" formmethod="post"></p>
+<form action= "post.php" method= "POST">
+
+    <p>Имя: </p><p> <input type= "text" name= "name"> </p>
+
+    <p>E-mail: </p><p> <input type= "text" name= "email"></p>
+
+    <p>Сообщение: </p><p> <textarea rows= "10" cols= "45" name= "message"></textarea></p>
+
+    <input type= "submit" value= "Отправить">
 </form>
 </body>
 </html>
