--- a/test/sin4yk/index.html
+++ b/test/sin4yk/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>SIN4YK</title>
     <link rel="stylesheet" href="styles/style.main.min.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="js/script.main.min.js"></script>
 </head>
 <body>
     <header>
@@ -89,6 +91,111 @@
         <section class="product">
             <p class="title">ПРОДУКЦИЯ</p>
             <div class="border border--product"></div>
+            <ul class="product__nav__list">
+                <li class="product__nav__item">
+                    <div class="product__nav__item__image">
+                        <img src="img/product_3.svg" alt="" class="product__nav__item__image__icon">
+                    </div>
+                    <p class="product__nav__item__title">КОНДИЦИОНИРОВАНИЕ</p>
+                </li>
+                <li class="product__nav__item">
+                    <div class="product__nav__item__image">
+                        <img src="img/product_1.svg" alt="" class="product__nav__item__image__icon">
+                    </div>
+                    <p class="product__nav__item__title">ОТОПЛЕНИЕ</p>
+                </li>
+                <li class="product__nav__item">
+                    <div class="product__nav__item__image">
+                        <img src="img/product_2.svg" alt="" class="product__nav__item__image__icon">
+                    </div>
+                    <p class="product__nav__item__title">ВЕНТИЛЯЦИЯ</p>
+                </li>
+            </ul>
+
+            <ul class="product__list">
+                <li class="product__list__item">
+                    <ul class="sublist">
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 1</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 2</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 3</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 4</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 5</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 6</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 7</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 8</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 9</a></li>
+                    </ul>
+                </li>
+                <li class="product__list__item">
+                    <ul class="sublist">
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 1</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 2</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 3</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 4</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 5</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 6</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 7</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 8</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт отопления 9</a></li>
+                    </ul>
+                </li>
+                <li class="product__list__item">
+                    <ul class="sublist">
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 1</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 2</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 3</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 4</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 5</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 6</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 7</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 8</a></li>
+                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт вентиляции 9</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section class="services clearfix">
+            <p class="title title--services">УСЛУГИ</p>
+            <div class="border border--services"></div>
+            <img src="img/services_image.jpg" alt="" class="services__image">
+            <ul class="services__list">
+                <li class="services__list__item">
+                    <img class="services__list__item__icon" src="img/services_icon_buy.png" alt="buy">
+                    <p class="services__list__item__title">ПРОДАЖА</p>
+                    <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
+                        и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
+                        века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
+                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
+                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
+                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
+                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
+                        используется Lorem Ipsum.</p>
+                </li>
+                <li class="services__list__item">
+                    <img class="services__list__item__icon" src="img/services_icon_install.png" alt="install">
+                    <p class="services__list__item__title">МОНТАЖ</p>
+                    <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
+                        и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
+                        века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
+                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
+                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
+                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
+                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
+                        используется Lorem Ipsum.</p>
+                </li>
+                <li class="services__list__item">
+                    <img class="services__list__item__icon" src="img/services_icon_service.png" alt="service">
+                    <p class="services__list__item__title">ОБСЛУЖИВАНИЕ</p>
+                    <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
+                        и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
+                        века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
+                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
+                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
+                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
+                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
+                        используется Lorem Ipsum.</p>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
