fixed product list

--- a/test/sin4yk/index.html
+++ b/test/sin4yk/index.html
@@ -111,11 +111,13 @@
                     <p class="product__nav__item__title">ВЕНТИЛЯЦИЯ</p>
                 </li>
             </ul>
-
             <ul class="product__list">
                 <li class="product__list__item">
                     <ul class="sublist">
-                        <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 1</a></li>
+                        <li class="sublist__item">
+                            <a class="sublist__item__link" href="">Продукт кондиционирования 1</a>
+
+                        </li>
                         <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 2</a></li>
                         <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 3</a></li>
                         <li class="sublist__item"><a class="sublist__item__link" href="">Продукт кондиционирования 4</a></li>
@@ -165,11 +167,7 @@
                     <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
                         и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
                         века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
-                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
-                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
-                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
-                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
-                        используется Lorem Ipsum.</p>
+                        используя Lorem Ipsum для распечатки образцов.</p>
                 </li>
                 <li class="services__list__item">
                     <img class="services__list__item__icon" src="img/services_icon_install.png" alt="install">
@@ -177,11 +175,7 @@
                     <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
                         и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
                         века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
-                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
-                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
-                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
-                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
-                        используется Lorem Ipsum.</p>
+                        используя Lorem Ipsum для распечатки образцов.</p>
                 </li>
                 <li class="services__list__item">
                     <img class="services__list__item__icon" src="img/services_icon_service.png" alt="service">
@@ -189,11 +183,7 @@
                     <p class="services__list__item__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати
                         и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI
                         века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
-                        используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
-                        заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое
-                        время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более
-                        недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
-                        используется Lorem Ipsum.</p>
+                        используя Lorem Ipsum для распечатки образцов. </p>
                 </li>
             </ul>
         </section>
