--- a/test/sin4yk/index.html
+++ b/test/sin4yk/index.html
@@ -187,6 +187,49 @@
                 </li>
             </ul>
         </section>
+        <section class="contacts">
+            <p class="title title--contacts">КОНТАКТЫ</p>
+            <div class="border border--contacts"></div>
+
+        </section>
     </main>
+    <footer class="clearfix">
+        <section class="logo logo--footer">
+            <img src="img/logo.jpg" alt="logo" class="logo__image logo__image--footer">
+            <a href="#" class="logo__title">SIN4YK</a>
+            <p class="logo__subtitle">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem
+                Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+        </section>
+        <nav class="footer__nav">
+            <ul class="nav__menu nav__menu--footer">
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">ГЛАВНАЯ</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">О НАС</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">МЕТРИКА</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">ПРОДУКЦИЯ</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">ГАРАНТИЯ</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">ДОСТАВКА</a>
+                </li>
+                <li class="nav__menu__item nav__menu__item--footer">
+                    <a href="#" class="nav__menu__item__link">КОНТАКТЫ</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__contact">
+            <p class="title title--footer_contact">КОНТАКТЫ</p>
+            <a href="#" class="footer__contact__email">sin4yk@gmail.com</a>
+            <a href="#" class="footer__contact__phone">+380631234567</a>
+        </div>
+    </footer>
 </body>
 </html>
