--- a/my works/Donuts/src/index.html
+++ b/my works/Donuts/src/index.html
@@ -43,5 +43,11 @@
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="js/script.main.min.js"></script>
+
+    <!--<script src="js/snap.svg-min.js"></script>-->
+    <!--<script src="js/jquery.countimator.min.js"></script>-->
+    <!--<script src="js/jcarousel.js"></script>-->
+    <!--<script src="js/main.js"></script>-->
+    <!--<script src="js/banner.js"></script>-->
 </body>
 </html>
