added banner1 block

--- a/my works/Donuts/src/index.html
+++ b/my works/Donuts/src/index.html
@@ -29,8 +29,16 @@
             </a>
         </div><!--/.banner__wrapper-->
     </div><!--/.banner-->
-
-
+    <div class="banner1 clearfix">
+        <img src="img/banner1_logo.svg" alt="" class="banner1__logo">
+        <section class="banner1__title">
+            <h1 class="banner1__title__text">ЛУЧШИЕ ПОНЧИКИ В КИЕВЕ</h1>
+        </section>
+        <p class="banner1__description">Наши пончики делаются вручную из натуральных продуктов
+            <span class="banner1__description__mobile"> и не содержат сахара</span>
+        </p>
+        <a href="#" class="banner1__link"><svg class="banner1__link__svg"></svg></a>
+    </div>
 
 
 
