--- a/my works/C&B/src/index.html
+++ b/my works/C&B/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>C&B</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <script src="https://use.fontawesome.com/7a078ab604.js"></script>
     <link rel="stylesheet" href="styles/style.main.min.css">
 </head>
@@ -21,5 +22,23 @@
             </ul>
         </nav>
     </header>
+    <div class="nav-container">
+        <nav class="clearfix">
+            <span class="logo">C<span>&</span>B</span>
+            <ul class="main-nav">
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link">HOME<span class="border"></span></a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link active">CATALOG<span class="border"></span></a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link">NEWS<span class="border"></span></a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link sale">SALE<span class="border"></span></a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link">ABOUT<span class="border"></span></a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__item__link">CONTACT<span class="border"></span></a></li>
+            </ul>
+            <section class="bag">
+                <span class="bag__title">YOUR BAG</span>
+                <span class="bag__number">2</span>
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </section>
+        </nav>
+    </div>
 </body>
 </html>
