--- a/my works/C&B/src/index.html
+++ b/my works/C&B/src/index.html
@@ -40,5 +40,87 @@
             </section>
         </nav>
     </div>
+    <main>
+        <h1>Catalog</h1>
+        <nav>
+            <ul class="content-nav">
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">ALL<span class="border"></span></a></li>
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">T-SHIRTS<span class="border"></span></a></li>
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">SWEATERS<span class="border"></span></a></li>
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">SHORTS<span class="border"></span></a></li>
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">JACKETS<span class="border"></span></a></li>
+                <li class="content-nav__item"><a href="#" class="content-nav__item__link">ACCESSOIRES<span class="border"></span></a></li>
+            </ul>
+        </nav>
+        <ul class="product">
+            <li class="product__item">
+                <img src="img/product-1.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Printed swimsuit</h2>
+                <span class="product__item__price">$23</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-2.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Jogging bermuda shorts</h2>
+                <span class="product__item__price sale"><span class="old-price">$36</span>$12</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-3.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Basic beach flip flops</h2>
+                <span class="product__item__price">$9</span>
+                <span class="product__item__new">NEW</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-4.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Black sunglasses</h2>
+                <span class="product__item__price">$29</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-5.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Long sleeved twill shirt</h2>
+                <span class="product__item__price">$20</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-6.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Basic swimsuit</h2>
+                <span class="product__item__price">$36</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-7.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">Bleached shorts</h2>
+                <span class="product__item__price">$12</span>
+            </li>
+            <li class="product__item">
+                <img src="img/product-8.jpg" alt="" class="product__item__image">
+                <h2 class="product__item__title">T-shirt with lower panel</h2>
+                <span class="product__item__price sale"><span class="old-price">$32</span>$12</span>
+            </li>
+        </ul>
+        <a href="#" class="load-more">LOAD MORE...</a>
+    </main>
+    <section class="subscribe clearfix">
+        <h2 class="subscribe__title">SUBSCRIBE</h2>
+        <h1 class="subscribe__description">Stay updated on news</h1>
+        <form class="subscribe__form" action="#">
+            <input name="email" class="subscribe__form__text" type="email" placeholder="YOUR EMAIL ADDRESS">
+            <input id="submit" class="subscribe__form__submit" type="submit">
+            <label class="subscribe__form__submit-label" for="submit"><i class="fa fa-angle-right" aria-hidden="true"></i></label>
+        </form>
+    </section>
+    <footer>
+        <div class="nav-container nav-container--footer">
+            <nav class="clearfix">
+                <span class="logo logo--footer">C<span>&</span>B</span>
+                <ul class="main-nav main-nav--footer">
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">HOME</span></a></li>
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">CATALOG</span></a></li>
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">NEWS</a></li>
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">SALE</a></li>
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">ABOUT</a></li>
+                    <li class="main-nav__item main-nav__item--footer"><a href="#" class="main-nav__item__link">CONTACT</a></li>
+                </ul>
+                <span class="copyright">&copy2010 - 2016 All rights reserved</span>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
