--- a/my works/C&B/src/index.html
+++ b/my works/C&B/src/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <script src="https://use.fontawesome.com/7a078ab604.js"></script>
     <link rel="stylesheet" href="styles/style.main.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
 </head>
 <body>
     <header>
@@ -40,61 +43,9 @@
             </section>
         </nav>
     </div>
-    <main>
+    <main id="main">
         <h1>Catalog</h1>
-        <nav>
-            <ul class="content-nav">
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">ALL<span class="border"></span></a></li>
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">T-SHIRTS<span class="border"></span></a></li>
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">SWEATERS<span class="border"></span></a></li>
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">SHORTS<span class="border"></span></a></li>
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">JACKETS<span class="border"></span></a></li>
-                <li class="content-nav__item"><a href="#" class="content-nav__item__link">ACCESSOIRES<span class="border"></span></a></li>
-            </ul>
-        </nav>
-        <ul class="product">
-            <li class="product__item">
-                <img src="img/product-1.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Printed swimsuit</h2>
-                <span class="product__item__price">$23</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-2.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Jogging bermuda shorts</h2>
-                <span class="product__item__price sale"><span class="old-price">$36</span>$12</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-3.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Basic beach flip flops</h2>
-                <span class="product__item__price">$9</span>
-                <span class="product__item__new">NEW</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-4.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Black sunglasses</h2>
-                <span class="product__item__price">$29</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-5.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Long sleeved twill shirt</h2>
-                <span class="product__item__price">$20</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-6.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Basic swimsuit</h2>
-                <span class="product__item__price">$36</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-7.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">Bleached shorts</h2>
-                <span class="product__item__price">$12</span>
-            </li>
-            <li class="product__item">
-                <img src="img/product-8.jpg" alt="" class="product__item__image">
-                <h2 class="product__item__title">T-shirt with lower panel</h2>
-                <span class="product__item__price sale"><span class="old-price">$32</span>$12</span>
-            </li>
-        </ul>
+        <div id="react-container"></div>
         <a href="#" class="load-more">LOAD MORE...</a>
     </main>
     <section class="subscribe clearfix">
@@ -122,5 +73,198 @@
             </nav>
         </div>
     </footer>
+    <script type="text/babel">
+        var PRODUCTS = [
+            {
+                id: 1,
+                category: 'shorts',
+                name: 'Printed swimsuit',
+                price: '$23',
+                oldPrice: '',
+                image: 'img/product-1.jpg'
+            },
+            {
+                id: 2,
+                category: 'shorts',
+                name: 'Jogging bermuda shorts',
+                price: '$12',
+                oldPrice: '$36',
+                image: 'img/product-2.jpg'
+            },
+            {
+                id: 3,
+                category: 'accessoires',
+                name: 'Basic beach flip flops',
+                price: '$9',
+                oldPrice: '',
+                image: 'img/product-3.jpg'
+            },
+            {
+                id: 4,
+                category: 'accessoires',
+                name: 'Black sunglasses',
+                price: '$29',
+                oldPrice: '',
+                image: 'img/product-4.jpg'
+            },
+            {
+                id: 5,
+                category: 'jackets',
+                name: 'Long sleeved twill shirt',
+                price: '$20',
+                oldPrice: '',
+                image: 'img/product-5.jpg'
+            },
+            {
+                id: 6,
+                category: 'shorts',
+                name: 'Basic swimsuit',
+                price: '$36',
+                oldPrice: '',
+                image: 'img/product-6.jpg'
+            },
+            {
+                id: 7,
+                category: 'shorts',
+                name: 'Bleached shorts',
+                price: '$12',
+                oldPrice: '',
+                image: 'img/product-7.jpg'
+            },
+            {
+                id: 8,
+                category: 't-shirts',
+                name: 'T-shirt with lower panel',
+                price: '$12',
+                oldPrice: '$32',
+                image: 'img/product-8.jpg'
+            }
+        ];
+        var CATEGORY = [
+            {
+                id: 1,
+                name: 'ALL'
+            },
+            {
+                id: 2,
+                name: 'T-SHIRTS'
+            },
+            {
+                id: 3,
+                name: 'SWEATERS'
+            },
+            {
+                id: 4,
+                name: 'SHORTS'
+            },
+            {
+                id: 5,
+                name: 'JACKETS'
+            },
+            {
+                id: 6,
+                name: 'ACCESSOIRES'
+            }
+        ];
+
+        var Product = React.createClass({
+           render: function () {
+               if (this.props.oldPrice) {
+                   var price = (
+                   <span className="product__item__price sale">
+                       <span className="old-price">{this.props.oldPrice}</span>{this.props.price}
+                   </span>
+                   )
+               } else {
+                   var price = (
+                    <span className="product__item__price">{this.props.price}</span>
+                   )
+               }
+               return (
+                       <li className="product__item">
+                            <img src={this.props.image} alt="" className="product__item__image" />
+                            <h2 className="product__item__title">{this.props.name}</h2>
+                           {price}
+                      </li>
+                      );
+           }
+        });
+
+
+        var Category = React.createClass({
+            handleFilterChange: function(e) {
+                this.props.updateFilter(e.target.textContent);
+            },
+            render: function () {
+                return (
+                        <li className="content-nav__item">
+                            <a onClick={this.handleFilterChange} className="content-nav__item__link">{this.props.name}<span className="border"></span></a>
+                        </li>
+                )
+            }
+        });
+
+        var ProductList = React.createClass({
+            getInitialState: function () {
+              return{
+                  displayProducts: PRODUCTS
+              }
+            },
+            handleFilterUpdate: function(filterValue) {
+                if(filterValue == 'ALL') {
+                    this.setState({
+                        displayProducts : PRODUCTS
+                    });
+                } else {
+                    var searchQuery = filterValue.toLowerCase();
+                    var displayProducts = PRODUCTS.filter(function (el) {
+                        var searchValue = el.category.toLowerCase();
+                        return searchValue.indexOf(searchQuery) !==-1;
+                    });
+
+                    this.setState({
+                        displayProducts : displayProducts
+                    });
+                }
+
+            },
+            render: function() {
+                var localThis = this;
+                return (
+                        <div>
+                            <ul className="content-nav">
+                                {
+                                    CATEGORY.map(function (el) {
+                                        return <Category key={el.id} name={el.name} updateFilter={localThis.handleFilterUpdate}  />
+                                    })
+                                }
+                            </ul>
+                            <ul className="product">
+                                {
+                                    this.state.displayProducts.map(function (el) {
+                                        return <Product key={el.id}
+                                                        name={el.name}
+                                                        image={el.image}
+                                                        price={el.price}
+                                                        oldPrice={el.oldPrice}
+                                        />;
+                                    })
+                                }
+                            </ul>
+                        </div>
+
+                );
+            }
+        });
+
+
+
+
+        ReactDOM.render(
+                <ProductList />,
+                document.getElementById('react-container')
+        );
+
+    </script>
 </body>
 </html>
