--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vintage</title>
+    <link rel="stylesheet" href="styles/style.main.min.css">
+    <script src="https://use.fontawesome.com/f9ccda9b6b.js"></script>
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+    <script src="js/script.main.min.js"></script>
 </head>
 <body>
+    <section class="home clearfix">
+        <video class="home__video"  playsinline autoplay muted loop>
+            <source src="http://r3---sn-a5m7ln7r.googlevideo.com/videoplayback?pl=24&mv=u&ipbits=0&ms=au&ratebypass=yes&id=o-AKwIMXGNA2ycUZT8TxoGLM3Dj5v9ZPwEno0mDUAQB5UH&source=youtube&expire=1491120906&dur=157.918&mt=1491099212&mime=video%2Fmp4&ip=173.232.7.186&upn=MhCR5tu_IAA&key=yt6&sparams=dur%2Cid%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Csource%2Cupn%2Cexpire&mn=sn-a5m7ln7r&lmt=1471174428097673&itag=22&mm=31&signature=D7F199F28E1E3FE0025FBAE6978B091F26265FE5.8C7AE2519B5E129F355688FEE2F350437BC4B54F&title=%D0%A1%D0%B0%D0%BC%D0%BE%D0%B5+%D0%BA%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D0%BE%D0%B5+%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE.+%D0%AF%D1%80%D0%BA%D0%B8%D0%B5+%D0%BC%D0%BE%D0%BC%D0%B5%D0%BD%D1%82%D1%8B.+%D0%9F%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0.+4%D0%9A+UHD" type="video/mp4">
+        </video>
+        <header>
+            <svg class="logo" viewBox="0 0 191.2 26">
+                <style type ="text/css">
 
+                </style>
+                <g>
+                    <polygon class="logo__image" points="25,0.1 12.5,26 19.6,26 32.2,0.1 	"/>
+                    <polygon class="logo__image" points="14.2,15 12.2,11 16.2,11 18.2,7 10.2,7 9.2,4 19.2,4 21.2,0 0,0 10.6,22.3 	"/>
+                </g>
+                <path class="logo__title" d="M58,21h3.1v-4.9h6.2v-3.7h-6.2V10h7.2V6.3L58,6.4V21z M78.5,6.3L73.3,21h3.1l1-2.5h5.2l1,2.5h3.1L81.6,6.3H78.5
+	                z M78.5,14.9l1-3.7h1l1,3.7H78.5z M166.6,6.3L161.4,21h3.1l1-2.5h5.2l1,2.5h3.1l-5.2-14.7H166.6z M166.6,14.9l1-3.7h1l1,3.7H166.6z
+	                 M97.5,12.4l-3.6-6.1h-3.1l5.2,8.6V21H99v-6.1l5.2-8.6h-3.1L97.5,12.4z M118.5,13.6l-5.2-7.4h-3.1V21h3.1v-8.6l5.5,8.6h2.8V6.3h-3.1
+	                V13.6z M137.5,13.3c1.2-0.6,1.9-1.7,1.9-3.3c0-1-0.3-1.7-0.8-2.3c-0.7-0.9-1.9-1.3-3.3-1.3h-5.7V21h5.7c1.4,0,2.6-0.4,3.4-1.1
+	                c0.8-0.7,1.2-1.7,1.2-2.9c0-1-0.2-1.7-0.6-2.3C139,14.1,138.3,13.6,137.5,13.3z M132.4,9.6h2.2c0.5,0,0.9,0.1,1.1,0.4
+	                c0.3,0.2,0.4,0.5,0.4,1c0,0.9-0.5,1.3-1.7,1.3h-2.2V9.6H132.4z M136.2,17.4c-0.3,0.2-0.7,0.4-1.2,0.4h-2.6v-2.7h2.6
+	                c0.5,0,0.9,0.1,1.2,0.4s0.4,0.6,0.4,1C136.6,16.8,136.5,17.2,136.2,17.4z M149.2,6.3h-3.1V21h9.3v-3.7h-6.2V6.3z M179.9,6.3V10h4.1
+	                v11h3.1V10h4.1V6.3H179.9z"/>
+            </svg>
+            <a href="#" class="menu-link clearfix">Меню
+                <svg class="menu-link__image" viewBox="-1 0 23 16">
+                    <path d="M0,16C1.7,10.7,3.3,5.3,5,0c0.7,0,1.3,0,2,0C5.3,5.3,3.7,10.7,2,16C1.3,16,0.7,16,0,16z"/>
+                    <path d="M14,0c-1.7,5.3-3.3,10.7-5,16c-0.7,0-1.3,0-2,0c1.7-5.3,3.3-10.7,5-16C12.7,0,13.3,0,14,0z"/>
+                    <path d="M21,0c-1.7,5.3-3.3,10.7-5,16c-0.7,0-1.3,0-2,0c1.7-5.3,3.3-10.7,5-16C19.7,0,20.3,0,21,0z"/>
+                </svg>
+            </a>
+            <ul class="languages">
+                <li class="languages__item"><a href="#" class="languages__link"></a>РУС</li>
+                <li class="languages__item"><a href="#" class="languages__link"></a>УКР</li>
+                <li class="languages__item"><a href="#" class="languages__link"></a>ENG</li>
+            </ul>
+        </header>
+        <h1 class="home__title">С нами ваши мечты превращаются в пространство для жизни</h1>
+        <section class="play">
+            <a class="play__link" href="#"><img src="img/play_icon.svg" alt="play"></a>
+            <span class="play__title">Showreel</span>
+        </section>
+        <a href="#" class="scroll-down">
+            <svg class="mouse-down" viewBox="0 0 28 41">
+                <path class="mouse-down__border" d="M14,1C6.8,1,1,6.8,1,14v13c0,7.2,5.8,13,13,13s13-5.8,13-13V14C27,6.8,21.2,1,14,1z"/>
+                <circle class="mouse-down__dot" cx="14" cy="16" r="2"/>
+            </svg>
+        </a>
+    </section>
 </body>
 </html>
