added main title split to lines

--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -9,12 +9,14 @@
             src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <script src="http://www.greensock.com/js/src/utils/SplitText.min.js"></script>
     <script src="js/script.main.min.js"></script>
 </head>
 <body>
     <section class="home clearfix">
         <video class="home__video"  playsinline autoplay muted loop>
-            <source src="http://r3---sn-a5m7ln7r.googlevideo.com/videoplayback?pl=24&mv=u&ipbits=0&ms=au&ratebypass=yes&id=o-AKwIMXGNA2ycUZT8TxoGLM3Dj5v9ZPwEno0mDUAQB5UH&source=youtube&expire=1491120906&dur=157.918&mt=1491099212&mime=video%2Fmp4&ip=173.232.7.186&upn=MhCR5tu_IAA&key=yt6&sparams=dur%2Cid%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Csource%2Cupn%2Cexpire&mn=sn-a5m7ln7r&lmt=1471174428097673&itag=22&mm=31&signature=D7F199F28E1E3FE0025FBAE6978B091F26265FE5.8C7AE2519B5E129F355688FEE2F350437BC4B54F&title=%D0%A1%D0%B0%D0%BC%D0%BE%D0%B5+%D0%BA%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D0%BE%D0%B5+%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE.+%D0%AF%D1%80%D0%BA%D0%B8%D0%B5+%D0%BC%D0%BE%D0%BC%D0%B5%D0%BD%D1%82%D1%8B.+%D0%9F%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0.+4%D0%9A+UHD" type="video/mp4">
+            <source src="https://r5---sn-2uja-aix6.googlevideo.com/videoplayback?itag=22&upn=wrBuVIs1sA8&ip=119.155.37.67&mt=1491164964&ratebypass=yes&dur=308.569&lmt=1478664525533068&sparams=dur%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&signature=9E87FC08D4D89A873D5029A00792C8F473503E22.E2CF8148FA3EFA3F38CE40DDEFD9C24C5839281A&ms=au&requiressl=yes&initcwndbps=173750&ipbits=0&pl=18&mv=m&mm=31&source=youtube&id=o-AILrX2JznsONG4GM41HpzLdVXDqwHdGMT89BOJCd7w8G&mn=sn-2uja-aix6&mime=video%2Fmp4&key=yt6&expire=1491186688&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
         </video>
         <header>
             <svg class="logo" viewBox="0 0 191.2 26">
