finish header animation and main title animation

--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -16,15 +16,12 @@
 <body>
     <section class="home clearfix">
         <video class="home__video"  playsinline autoplay muted loop>
-            <source src="https://r5---sn-2uja-aix6.googlevideo.com/videoplayback?itag=22&upn=wrBuVIs1sA8&ip=119.155.37.67&mt=1491164964&ratebypass=yes&dur=308.569&lmt=1478664525533068&sparams=dur%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&signature=9E87FC08D4D89A873D5029A00792C8F473503E22.E2CF8148FA3EFA3F38CE40DDEFD9C24C5839281A&ms=au&requiressl=yes&initcwndbps=173750&ipbits=0&pl=18&mv=m&mm=31&source=youtube&id=o-AILrX2JznsONG4GM41HpzLdVXDqwHdGMT89BOJCd7w8G&mn=sn-2uja-aix6&mime=video%2Fmp4&key=yt6&expire=1491186688&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
+            <source src="http://r3---sn-xguxaxjvh-gufe.googlevideo.com/videoplayback?signature=0E13884E04DE986788A763926804E5FF159DEA99.E0D8D3724FD1B2F29DA6845414D4B108A4D32E07&ratebypass=yes&ip=188.235.130.187&mt=1491180114&mime=video%2Fmp4&mv=u&key=yt6&mn=sn-xguxaxjvh-gufe&mm=31&dur=308.569&id=o-AMPXxnjF6mN_g4TbzbgOO1BuE06alzvTwAqRqOlfEkjq&pl=22&itag=22&sparams=dur%2Cid%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Csource%2Cupn%2Cexpire&ipbits=0&ms=au&expire=1491201894&upn=lBRKoajZUxM&source=youtube&lmt=1478664525533068&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
         </video>
         <header>
             <svg class="logo" viewBox="0 0 191.2 26">
-                <style type ="text/css">
-
-                </style>
                 <g>
-                    <polygon class="logo__image" points="25,0.1 12.5,26 19.6,26 32.2,0.1 	"/>
+                    <polygon class="logo__image" points="25,0.1 12.5,26 19.6,26 32.2,0.1"/>
                     <polygon class="logo__image" points="14.2,15 12.2,11 16.2,11 18.2,7 10.2,7 9.2,4 19.2,4 21.2,0 0,0 10.6,22.3 	"/>
                 </g>
                 <path class="logo__title" d="M58,21h3.1v-4.9h6.2v-3.7h-6.2V10h7.2V6.3L58,6.4V21z M78.5,6.3L73.3,21h3.1l1-2.5h5.2l1,2.5h3.1L81.6,6.3H78.5
@@ -36,7 +33,8 @@
 	                c0.5,0,0.9,0.1,1.2,0.4s0.4,0.6,0.4,1C136.6,16.8,136.5,17.2,136.2,17.4z M149.2,6.3h-3.1V21h9.3v-3.7h-6.2V6.3z M179.9,6.3V10h4.1
 	                v11h3.1V10h4.1V6.3H179.9z"/>
             </svg>
-            <a href="#" class="menu-link clearfix">Меню
+            <a href="#" class="menu-link clearfix">
+                <span class="menu-link__title">Меню</span>
                 <svg class="menu-link__image" viewBox="-1 0 23 16">
                     <path d="M0,16C1.7,10.7,3.3,5.3,5,0c0.7,0,1.3,0,2,0C5.3,5.3,3.7,10.7,2,16C1.3,16,0.7,16,0,16z"/>
                     <path d="M14,0c-1.7,5.3-3.3,10.7-5,16c-0.7,0-1.3,0-2,0c1.7-5.3,3.3-10.7,5-16C12.7,0,13.3,0,14,0z"/>
@@ -49,7 +47,7 @@
                 <li class="languages__item"><a href="#" class="languages__link"></a>ENG</li>
             </ul>
         </header>
-        <h1 class="home__title">С нами ваши мечты превращаются в пространство для жизни</h1>
+        <div class="home__title clearfix">С нами ваши мечты превращаются в пространство для жизни</div>
         <section class="play">
             <a class="play__link" href="#"><img src="img/play_icon.svg" alt="play"></a>
             <span class="play__title">Showreel</span>
