--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="home clearfix">
         <video class="home__video"  playsinline autoplay muted loop>
-            <source src="http://r3---sn-xguxaxjvh-gufe.googlevideo.com/videoplayback?signature=0E13884E04DE986788A763926804E5FF159DEA99.E0D8D3724FD1B2F29DA6845414D4B108A4D32E07&ratebypass=yes&ip=188.235.130.187&mt=1491180114&mime=video%2Fmp4&mv=u&key=yt6&mn=sn-xguxaxjvh-gufe&mm=31&dur=308.569&id=o-AMPXxnjF6mN_g4TbzbgOO1BuE06alzvTwAqRqOlfEkjq&pl=22&itag=22&sparams=dur%2Cid%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Csource%2Cupn%2Cexpire&ipbits=0&ms=au&expire=1491201894&upn=lBRKoajZUxM&source=youtube&lmt=1478664525533068&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
+            <source src="https://r4---sn-3tgbt1-vnne.googlevideo.com/videoplayback?id=o-AKYRQyFasjKJa6eQDRtJ2TnXY2-phZVIg8pizd-ObV2h&mm=31&mn=sn-3tgbt1-vnne&dur=308.569&pl=19&ip=89.237.203.251&lmt=1478664525533068&ei=KdXhWIWMAcaUdIvEsfAI&ms=au&source=youtube&mv=m&requiressl=yes&mt=1491195083&signature=E32A8F61DF70C14D48F572976901E199F9A4B518.19EE000B07C68B6C9ADB8A5CE0DE2B2825548DD2&ipbits=0&mime=video%2Fmp4&initcwndbps=873750&itag=22&ratebypass=yes&expire=1491216777&sparams=dur%2Cei%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&upn=szQkUp3Gnqs&key=yt6&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
         </video>
         <header>
             <svg class="logo" viewBox="0 0 191.2 26">
@@ -47,15 +47,18 @@
                 <li class="languages__item"><a href="#" class="languages__link"></a>ENG</li>
             </ul>
         </header>
-        <div class="home__title clearfix">С нами ваши мечты превращаются в пространство для жизни</div>
+        <h1 class="home__title clearfix">С нами ваши мечты превращаются в пространство для жизни</h1>
         <section class="play">
             <a class="play__link" href="#"><img src="img/play_icon.svg" alt="play"></a>
             <span class="play__title">Showreel</span>
         </section>
         <a href="#" class="scroll-down">
             <svg class="mouse-down" viewBox="0 0 28 41">
-                <path class="mouse-down__border" d="M14,1C6.8,1,1,6.8,1,14v13c0,7.2,5.8,13,13,13s13-5.8,13-13V14C27,6.8,21.2,1,14,1z"/>
+                <path class="mouse-down__border" d="M13.8,1C21.1,1,27,6.8,27,14v13c0,7.2-5.9,13-13.2,13"/>
+                <path class="mouse-down__border mouse-down__border--pink" d="M13.8,1C21.1,1,27,6.8,27,14v13c0,7.2-5.9,13-13.2,13"/>
                 <circle class="mouse-down__dot" cx="14" cy="16" r="2"/>
+                <path class="mouse-down__border" d="M14,1C6.8,1,1,6.8,1,14v13c0,7.2,5.8,13,13,13"/>
+                <path class="mouse-down__border mouse-down__border--pink" d="M14,1C6.8,1,1,6.8,1,14v13c0,7.2,5.8,13,13,13"/>
             </svg>
         </a>
     </section>
