--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -18,7 +18,7 @@
         <video class="home__video"  playsinline autoplay muted loop>
             <source src="https://r4---sn-3tgbt1-vnne.googlevideo.com/videoplayback?id=o-AKYRQyFasjKJa6eQDRtJ2TnXY2-phZVIg8pizd-ObV2h&mm=31&mn=sn-3tgbt1-vnne&dur=308.569&pl=19&ip=89.237.203.251&lmt=1478664525533068&ei=KdXhWIWMAcaUdIvEsfAI&ms=au&source=youtube&mv=m&requiressl=yes&mt=1491195083&signature=E32A8F61DF70C14D48F572976901E199F9A4B518.19EE000B07C68B6C9ADB8A5CE0DE2B2825548DD2&ipbits=0&mime=video%2Fmp4&initcwndbps=873750&itag=22&ratebypass=yes&expire=1491216777&sparams=dur%2Cei%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&upn=szQkUp3Gnqs&key=yt6&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
         </video>
-        <header>
+        <header class="clearfix">
             <svg class="logo" viewBox="0 0 191.2 26">
                 <g>
                     <polygon class="logo__image" points="25,0.1 12.5,26 19.6,26 32.2,0.1"/>
@@ -35,10 +35,11 @@
             </svg>
             <a href="#" class="menu-link clearfix">
                 <span class="menu-link__title">Меню</span>
-                <svg class="menu-link__image" viewBox="-1 0 23 16">
-                    <path d="M0,16C1.7,10.7,3.3,5.3,5,0c0.7,0,1.3,0,2,0C5.3,5.3,3.7,10.7,2,16C1.3,16,0.7,16,0,16z"/>
-                    <path d="M14,0c-1.7,5.3-3.3,10.7-5,16c-0.7,0-1.3,0-2,0c1.7-5.3,3.3-10.7,5-16C12.7,0,13.3,0,14,0z"/>
-                    <path d="M21,0c-1.7,5.3-3.3,10.7-5,16c-0.7,0-1.3,0-2,0c1.7-5.3,3.3-10.7,5-16C19.7,0,20.3,0,21,0z"/>
+                <span class="menu-link__title hidden">Закрыть</span>
+                <svg class="menu-link__image" viewBox="0 0 33.4 24.5">
+                    <path d="M0.1,22.5L7.3,1.1C7.5,0.4,8.1,0,8.8,0h0c1.1,0,1.8,1,1.5,2.1L3,23.5c-0.2,0.6-0.8,1.1-1.5,1.1h0C0.5,24.5-0.3,23.5,0.1,22.5z"/>
+                    <path d="M21.8,2.1l-7.2,21.4c-0.2,0.6-0.8,1.1-1.5,1.1h0c-1.1,0-1.8-1-1.5-2.1c2.4-7.1,4.8-14.3,7.2-21.4C19,0.4,19.6,0,20.3,0h0C21.4,0,22.1,1,21.8,2.1z"/>
+                    <path d="M33.3,2.1c-2.4,7.1-4.8,14.3-7.2,21.4c-0.2,0.6-0.8,1.1-1.5,1.1h0c-1.1,0-1.8-1-1.5-2.1c2.4-7.1,4.8-14.3,7.2-21.4C30.6,0.4,31.2,0,31.8,0h0C32.9,0,33.7,1,33.3,2.1z"/>
                 </svg>
             </a>
             <ul class="languages">
@@ -47,6 +48,33 @@
                 <li class="languages__item"><a href="#" class="languages__link"></a>ENG</li>
             </ul>
         </header>
+        <section class="menu">
+            <ul class="menu__list">
+                <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Портфолио</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">О Виктории</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Пресса</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+            </ul>
+            <ul class="social__list">
+                <li class="social__item">
+                    <a href="#" class="sicial__link">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" class="sicial__link">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" class="sicial__link">
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </section>
         <h1 class="home__title clearfix">С нами ваши мечты превращаются в пространство для жизни</h1>
         <section class="play">
             <a class="play__link" href="#"><img src="img/play_icon.svg" alt="play"></a>
