added animation for menu

--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -43,9 +43,9 @@
                 </svg>
             </a>
             <ul class="languages">
-                <li class="languages__item"><a href="#" class="languages__link"></a>РУС</li>
-                <li class="languages__item"><a href="#" class="languages__link"></a>УКР</li>
-                <li class="languages__item"><a href="#" class="languages__link"></a>ENG</li>
+                <li class="languages__item"><a href="#" class="languages__link active">РУС</a></li>
+                <li class="languages__item"><a href="#" class="languages__link">УКР</a></li>
+                <li class="languages__item"><a href="#" class="languages__link">ENG</a></li>
             </ul>
         </header>
         <section class="menu">
