--- a/test/Vintage/src/index.html
+++ b/test/Vintage/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vintage</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
     <link rel="stylesheet" href="styles/style.main.min.css">
     <script src="https://use.fontawesome.com/f9ccda9b6b.js"></script>
     <script
@@ -16,7 +17,7 @@
 <body>
     <section class="home clearfix">
         <video class="home__video"  playsinline autoplay muted loop>
-            <source src="https://r4---sn-3tgbt1-vnne.googlevideo.com/videoplayback?id=o-AKYRQyFasjKJa6eQDRtJ2TnXY2-phZVIg8pizd-ObV2h&mm=31&mn=sn-3tgbt1-vnne&dur=308.569&pl=19&ip=89.237.203.251&lmt=1478664525533068&ei=KdXhWIWMAcaUdIvEsfAI&ms=au&source=youtube&mv=m&requiressl=yes&mt=1491195083&signature=E32A8F61DF70C14D48F572976901E199F9A4B518.19EE000B07C68B6C9ADB8A5CE0DE2B2825548DD2&ipbits=0&mime=video%2Fmp4&initcwndbps=873750&itag=22&ratebypass=yes&expire=1491216777&sparams=dur%2Cei%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&upn=szQkUp3Gnqs&key=yt6&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
+            <source src="https://r13---sn-nv47lnee.googlevideo.com/videoplayback?dur=308.569&mn=sn-nv47lnee&mm=31&ratebypass=yes&initcwndbps=937500&requiressl=yes&lmt=1478664525533068&signature=771B462D23AFA398FB1AA98ABB834A5F19618F73.A828010342CDFA295E96900E1DAE95961FEF2348&ms=au&key=yt6&mv=m&pl=24&mt=1491310109&source=youtube&ipbits=0&ip=151.250.38.114&mime=video%2Fmp4&expire=1491331824&itag=22&upn=3LzM-khqzFU&id=o-ACw0iJ6RLMMvAJvTEs8wN43uXTUT_1f_7leyWwjiPhvA&sparams=dur%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cupn%2Cexpire&title=COSTA+RICA+IN+4K+60fps+%28ULTRA+HD%29+w-+Freefly+Movi" type="video/mp4">
         </video>
         <header class="clearfix">
             <svg class="logo" viewBox="0 0 191.2 26">
